--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
     "stripe": "^20.1.0",
     "tailwind-merge": "^3.3.1"
   },
